<resources>
    <string name="app_name">NotePad</string>
    <string name="Notes">Notes</string>
    <string name="sync_note">Sync Notes</string>
    <string name="closes">close</string>
    <string name="opens">open</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="my_favourites_txt">Favourite</string>
    <string name="export_backup">Export &amp; Backup</string>
    <string name="trash_menu">Trash</string>
    <string name="backup_before_import">Do you want backup current database before import an old database?</string>
    <string name="backup_empty">Backup file is empty</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="note_hint">Note:</string>
    <string name="privacy_txt">Privacy</string>
    <string name="privacy_title_text">Please keep your password in mind</string>
    <string name="lib_name">PatternLockView</string>
    <string name="message_pattern_dot_added">Dot added to pattern</string>
    <string name="message_pattern_started">Pattern drawing started</string>
    <string name="message_pattern_detected">Pattern drawing completed</string>
    <string name="message_pattern_cleared">Pattern cleared</string>


    <string name="colorpicker_dialog_title">Choose the color</string>
    <string name="colorpicker_dialog_cancel">Cancel</string>
    <string name="colorpicker_dialog_ok">OK</string>

    <string name="tedpermission_setting">Setting</string>
    <string name="tedpermission_close">Close</string>
    <string name="tedpermission_confirm">Confirm</string>

    <string name="rationale_title">Permission required</string>
    <string name="rationale_message">We need permission for Write and Read <b>storage</b></string>
    <string name="are_link_title">Link</string>
    <string name="are_link_insert_hint">Insert a link</string>
    <string name="backup_title">History saved backup data</string>
    <string name="export_text">Export text</string>
    <string name="backup_notes">Backup notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logintxt">Login</string>
    <string name="privacy_action_txt_confirm">Confirm your unlock pattern</string>
    <string name="privacy_action_txt_tryagain">Patterns do not match, try again!</string>
    <string name="privacy_no_notes_txt">Your Notes privacy will be kept here</string>
    <string name="privacy_title_setquestion">Set security question</string>
    <string name="forget_pwd_title">Forget the password can through the security question to reset</string>
    <string name="empty"> </string>
    <string name="pattern_action_txt_confirmstart">Draw unlock pattern</string>
    <string name="reset_code_text">Reset passcode</string>
    <string name="privacy_test_title">Draw unlock pattern</string>
    <string name="please_wait">Please wait</string>
    <string name="loading_dots">Processing…</string>
    <string name="title_empty_text"><![CDATA[<Untitled>]]></string>
    <string name="feedback">Help &amp; Feedback</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="input_your_answer">Input your answer</string>
    <string name="note_title">%1$s ..</string>
    <string name="privacy_policy_txt">Privacy policy</string>
    <string name="exportbackuptitle"><![CDATA[Exports & Backup]]></string>
    <string name="exportbackuperrnote">Your backup files will be displayed here</string>
    <string name="done">Done</string>
    <string name="exit_app_txt">Do you want exit from app?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="add_note">Add note</string>
    <string name="trash_no_notes_msg">Your Notes in Trash will be deleted after 7 days</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>

</resources>
