<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

            <item
                android:checked="false"
                app:actionViewClass="android.widget.TextView"
                android:icon="@drawable/ic_event_note"
                android:id="@+id/notes"
                android:title="@string/Notes"/>
            <item
                android:checked="false"
                app:actionViewClass="android.widget.TextView"
                android:icon="@drawable/ic_favorite"
                android:id="@+id/myfav"
                android:title="@string/my_favourites_txt"/>
            <item
                android:checked="false"
                android:visible="false"
                android:id="@+id/syncnote"
                android:title="@string/sync_note"/>


            <item
                android:checked="false"
                app:actionViewClass="android.widget.TextView"
                android:icon="@drawable/ic_lock"
                android:id="@+id/menu_privacy"
                android:title="@string/privacy_txt"/>
            <item
                android:checked="false"
                android:icon="@drawable/ic_delete"
                android:id="@+id/trash"
                app:actionViewClass="android.widget.TextView"
                android:title="@string/trash_menu"/>
            <item
                android:checked="false"
                android:icon="@drawable/ic_backup"
                android:id="@+id/backup"
                android:title="@string/export_backup"/>



        <item
            android:icon="@drawable/ic_settings"
            android:id="@+id/menu_settings"
            android:title="@string/settings"/>
    <item
        android:icon="@drawable/ic_share"
        android:id="@+id/menu_share"
        android:title="@string/share_with_friends"/>
        <item
            android:icon="@drawable/ic_feedback"
            android:id="@+id/menu_feedback"
            android:title="@string/feedback"/>
        <item
            android:icon="@drawable/ic_privacy"
            android:id="@+id/menu_privacypolicy"
            android:title="@string/privacy_policy"/>




            <item
                android:visible="false"
                app:showAsAction="never"
                android:id="@+id/logout"
                android:title="@string/logintxt"/>


   <!-- <item

        android:title="@string/logouttxt">
        android:title="Support">
        <menu>
            <item
                app:showAsAction="never"
                android:icon="@drawable/ic_logout_key"
                android:id="@+id/logout"
                android:title="@string/logintxt"/>
        </menu>
    </item>-->
</menu>