<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="com.keepnote.viewmodel.HomeViewmodel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bodybg"
    tools:context=".view.exportbackup.ExportBackup">

    <include
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:id="@+id/exporttxt"
        android:fontFamily="@font/robotoslabregular"
        android:textColor="@color/white"
        android:text="@string/export_text"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:gravity="center"
        android:background="@drawable/cur_btnbg"
        app:backgroundTint="?attr/btnbg"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exportbackup"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/robotoslabregular"
        android:textColor="@color/white"
        android:text="@string/backup_notes"
        app:layout_constraintTop_toBottomOf="@id/exporttxt"
        app:layout_constraintStart_toStartOf="@id/exporttxt"
        app:layout_constraintEnd_toEndOf="@id/exporttxt"
        android:layout_width="0dp"
        android:background="@drawable/cur_btnbg"
        app:backgroundTint="?attr/btnbg"
        android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/exportbackup"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@id/exportbackup"
            android:id="@+id/backuptitle"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:visibility="visible"
            android:layout_height="wrap_content"
            app:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/robotoslabregular"
            android:text="@string/backup_title"
            android:textColor="@color/subtxtcolor"
            />
        <ImageView
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/exportbackup"
            app:layout_constraintEnd_toEndOf="@id/exportbackup"
            android:id="@+id/delete"
            app:srcCompat="@drawable/ic_delete"
            android:layout_gravity="end|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/backup_empty" />
    <View
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete"
        android:layout_below="@+id/toolbar"
        android:id="@+id/vw_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/transparent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/backuprecycler"
        android:layout_marginBottom="@dimen/_5sdp"
       app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintTop_toBottomOf="@id/vw_1"
        app:layout_constraintEnd_toEndOf="@id/exportbackup"
        app:layout_constraintStart_toStartOf="@id/exportbackup"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <com.google.android.gms.ads.AdView
        android:visibility="gone"
        android:id="@+id/adView"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1494528376931516/5373803612"
        android:layout_height="wrap_content"/>
    <View
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
       app:layout_constraintBottom_toBottomOf="parent"
        android:layout_below="@+id/toolbar"
        android:id="@+id/vw_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/lightwindoebackground"/>
    <include
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backuptitle"
        app:layout_constraintEnd_toEndOf="@id/exportbackup"
        app:layout_constraintStart_toStartOf="@id/exportbackup"
        android:id="@+id/err_layout"
        layout="@layout/error_layout"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>